Modernize main sources to Java 21 idioms.
No behavioural change; the language and interpreter semantics are
unchanged and the test suite is untouched.

Raw types are the substantive part. Function, BoundMethod,
PrintFunction, JavaMethod, BoundJavaMethod, JavaClass and
ImportFunction all declared a raw Scope parameter while Callable
declares Scope<Object>, so they satisfied the interface only by
erasure. Those are now Scope<Object>, and the reflection classes use
Class<?> instead of raw Class, which removes two //noinspection
unchecked suppressions. The one genuinely uncheckable cast, (R) in
Function.call, is now an explicit @SuppressWarnings rather than an
unmarked warning. The build is warning-clean under -Xlint.

Idiom updates: pattern-matching instanceof in truth(), number(),
visitCall(), BabbleObject.get() and both optimizer visitors; arrow
switches; String.join in place of two manual StringBuilder loops;
List.of; and values().toArray() in place of a hand-rolled copy.

Two deliberate non-changes:

- visitBinaryOp uses an arrow switch with return, not a switch
  expression with yield. A switch expression applies binary numeric
  promotion across its arms, which would turn 12 * 12 from Integer 144
  into Double 144.0 and change the language's semantics.

- Slot stays a class rather than becoming a record; it is mutable.

The optimizer's MUL case relied on non-obvious fallthrough (an integer
left operand that is neither 0 nor 1 continues to the right-hand
checks). That is preserved as an else-if chain and commented, and the
repeated literal test is extracted into isIntegerLiteral().

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>